--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,15 @@ html {
 a {
   font: normal 700 1em 'Comfortaa', sans-serif;
   text-decoration: none;
+  color: blue;
 }
 
 h1 {
   font: normal 700 2em 'Comfortaa', sans-serif;
+}
+
+h2 {
+  font: normal 700 1.5em 'Comfortaa', sans-serif;
 }
 
 p {
@@ -25,6 +30,24 @@ p {
 
 ul {
   list-style: none;
+}
+
+#btn-topo {
+  position: fixed;
+  top: 470px;
+  right: 10px;
+  padding: 10px;
+  border-radius: 100%;
+  border: none;
+  background-color: chocolate;
+}
+
+#btn-topo a {
+  color: #ecf0f1;
+}
+
+.logotipo {
+  width: 130px;
 }
 
 #cabecalho {
@@ -74,34 +97,148 @@ ul {
   scroll-margin-bottom: 2em;
 }
 
-.container {
+#trabalhos {
+  background-color: #d2dcd3;
+}
+
+.container_trabalhos {
   display: grid;
   text-align: center;
 }
 
-.container .item {
+.container_trabalhos .item {
   margin: 15px 0;
 }
 
-.container .item img {
+.container_trabalhos .item img {
   width: 350px;
   border-radius: 50px 20px;
 }
 
+/* ########## */
 
+#equipe:target {
+  scroll-margin-bottom: 2em;
+}
 
+#equipe {
+  height: 100vh;
+  background-color: #fef2f2;
+}
 
+.container {
+  display: grid;
+  text-align: center; 
+}
 
+.container .item {
+  margin: 20px;
+}
 
+.container .item .img_equipe {
+  width: 150px;
+  border-radius: 50px 20px;
+}
+
+.container .item .ul_equipe li {
+  font: normal 300 1em 'Comfortaa';
+}
+
+.container .item .ul_equipe li:before {
+  content: "> ";
+}
+
+/* ############## */
+
+#contato:target {
+  scroll-margin-bottom: 2em;
+}
+
+#contato {
+  background-color: #e8eab9;
+  height: 60vh;
+}
+
+#contato h2 {
+  margin: 10px;
+}
+
+.ul_contato li {
+  display: flex;
+  justify-content: center;
+}
+
+.ul_contato li p {
+  margin: 3px;
+}
+
+#btn-orcamento {
+  padding: 10px;
+  font: normal 700 18px 'Comfortaa';
+  background-color: #141ccd;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: .5s;
+}
+
+#btn-orcamento:hover {
+  background-color: blue;
+  transition: .5s;
+}
+
+#btn-orcamento a {
+  color: #ecf0f1;
+}
+
+/* ############ */
+
+#rodape {
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e8eab9;
+}
+
+/* ############# */
 
 @media (min-width: 760px) {
   .container {
     grid-template-columns: 1fr 1fr;
   }
+
+  #equipe {
+    height: 50vh;
+  }
 }
 
 @media (min-width: 1096px) {
-  .container {
+  .container_trabalhos {
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+  #equipe {
+    height: 60vh;
+  }
+
+
+  
+  .container .item .img_equipe {
+    width: 150px;
+  }
+  
+  .container .item .ul_equipe li {
+    font: normal 300 1em 'Comfortaa';
+  }
+  
+  .container .item .ul_equipe li:before {
+    content: "> ";
+  }
 }
+
+
+
+
+
+
