--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ ul {
 
 #apresentacao {
   height: 90vh;
-  background-image: url(/assets/imgs/presentation.JPG);
+  background-image: url(./assets/imgs/presentation.JPG);
   background-repeat: no-repeat;
   background-size: cover;
   color: #ecf0f1;
