--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,10 +73,10 @@ ul {
 
 #apresentacao {
   height: 90vh;
-  background: url('/assets/imgs/um.JPG') center no-repeat;
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
-  color: #ecf0f1;
+  background: #00F260;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #0575E6, #00F260);
+  /* color: #ecf0f1; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -122,7 +122,7 @@ ul {
 }
 
 #equipe {
-  height: 100vh;
+  height: 70vh;
   background-color: #fef2f2;
 }
 
@@ -156,7 +156,7 @@ ul {
 
 #contato {
   background-color: #e8eab9;
-  height: 60vh;
+  height: 40vh;
 }
 
 #contato h2 {
